# gimbal-rpi

./: .clang-format  .clang-tidy  .gitlab-ci.yml  CMakeLists.txt  Config.in  LICENSE  README.md  gimbal-rpi.mk  ssl-tracking-cam.mk
cmake/: arm-buildroot-linux-gnueabihf.toolchain.cmake  arm-linux-gnueabihf.toolchain.cmake  arm-none-linux-gnueabihf.toolchain.cmake  git_version.cmake
doc/: RPI Zero 2W Pinout.xlsx  Stepper Driver Hat Pinout.xlsx  max_speeds.wxmx
movement-tester/: README.md  messages_robocup_ssl_detection_tracked.proto  movement-tester.py
src/: GimbalController.cpp  GimbalController.hpp  MotionController.cpp  MotionController.hpp  Presenter.cpp  Presenter.hpp  Settings.cpp  Settings.hpp  State.hpp  StepperAxis.cpp  StepperAxis.hpp  TrackedFrameProvider.cpp  TrackedFrameProvider.hpp  TrackingCamera.cpp  TrackingCamera.hpp  View.cpp  View.hpp  lv_conf.h  main.cpp
src/drv/: Joystick.cpp  Joystick.hpp  TMC2209.cpp  TMC2209.hpp
src/model/: GimbalProtocolMessage.cpp  GimbalProtocolMessage.hpp  GimbalProtocolTransceiver.cpp  GimbalProtocolTransceiver.hpp  Joystick.cpp  Joystick.hpp  gimbal_protocol.h
src/proto/: messages_robocup_ssl_detection.pb.cc  messages_robocup_ssl_geometry.pb.cc  messages_robocup_ssl_wrapper.pb.h  messages_robocup_ssl_wrapper_tracked.pb.h
src/proto.bak/: messages_robocup_ssl_detection.pb.h  messages_robocup_ssl_detection_tracked.pb.cc  messages_robocup_ssl_detection_tracked.pb.h  messages_robocup_ssl_geometry.pb.h  messages_robocup_ssl_wrapper.pb.cc  messages_robocup_ssl_wrapper_tracked.pb.cc
src/protobuf-c/: messages_robocup_ssl_detection.pb-c.c  messages_robocup_ssl_detection.pb-c.h  messages_robocup_ssl_detection_tracked.pb-c.c  messages_robocup_ssl_detection_tracked.pb-c.h  messages_robocup_ssl_geometry.pb-c.c  messages_robocup_ssl_geometry.pb-c.h  messages_robocup_ssl_wrapper.pb-c.c  messages_robocup_ssl_wrapper.pb-c.h  messages_robocup_ssl_wrapper_tracked.pb-c.c  messages_robocup_ssl_wrapper_tracked.pb-c.h
src/util/: IoPort.hpp  NetworkInterface.cpp  NetworkInterface.hpp  RPiGPIO.cpp  RPiGPIO.hpp  STBootloader.cpp  STBootloader.hpp  SerialPort.cpp  SerialPort.hpp  SerialPortPosix.cpp  SysFsEntry.cpp  SysFsEntry.hpp  TrajPolynomialQuintic.cpp  TrajPolynomialQuintic.hpp  UDPSyncClient.cpp  UDPSyncClient.hpp  cobs.c  cobs.h  crc.c  crc.h  math_util.cpp  math_util.hpp  traj_2order.c  traj_2order.h
systemd/: gimbal-rpi.service  ssl-tracking-cam.service
